Fix margin and alignment issue with content creation buttons

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 .layer-bottom {
    grid-column: 1 / 3;
    display: flex;
-   align-items: flex-end;
+   align-items: center;
    justify-content: space-between;
    margin: 20px 20px 0 30px;
 }
@@ -103,7 +103,6 @@
    align-items: center;
    justify-content: space-between;
    width: 30vw;
-   margin-bottom: 1rem;
 }
 
 .content-create-button {
@@ -114,7 +113,6 @@
    height: 30px;
    width: 75px;
    font-weight: bold;
-   margin-bottom: 5px;
    margin-right: 10px;
 }
 
